--- a/react-app/src/Components/SearchBar.css
+++ b/react-app/src/Components/SearchBar.css
@@ -7,13 +7,29 @@
     
 .search 
 {
-    border-radius: 100px;
-    border: 1px solid #cccccc;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
     font-size: 16px;
-    padding: 10px 100px 10px 15px;
+    padding: 10px 10px 10px 15px;
+}
+
+input
+{
+    width: 400px;
+    background-color: rgb(240, 240, 240);
 }
 
 input:focus 
 {
     outline:none;
+    background-color: white;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
 }
+
+input:hover
+{
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+}  
